src/main/java/com/example/betteriter/global/error/GloblaExceptionHandler.java
package com.example.betteriter.global.error;

public class GloblaExceptionHandler {
}
